// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getInputs should correctly parse boolean inputs 1`] = `
{
  "apiUrl": undefined,
  "baseSha": undefined,
  "diffRelative": "false",
  "dirNames": "false",
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": "false",
  "dirNamesExcludeCurrentDir": "false",
  "dirNamesIncludeFiles": undefined,
  "dirNamesIncludeFilesSeparator": undefined,
  "escapeJson": false,
  "excludeSubmodules": "false",
  "failOnInitialDiffError": "false",
  "failOnSubmoduleDiffError": "false",
  "fetchAdditionalSubmoduleHistory": "false",
  "files": undefined,
  "filesFromSourceFile": undefined,
  "filesFromSourceFileSeparator": undefined,
  "filesIgnore": undefined,
  "filesIgnoreFromSourceFile": undefined,
  "filesIgnoreFromSourceFileSeparator": undefined,
  "filesIgnoreSeparator": undefined,
  "filesIgnoreYaml": undefined,
  "filesIgnoreYamlFromSourceFile": undefined,
  "filesIgnoreYamlFromSourceFileSeparator": undefined,
  "filesSeparator": undefined,
  "filesYaml": undefined,
  "filesYamlFromSourceFile": undefined,
  "filesYamlFromSourceFileSeparator": undefined,
  "includeAllOldNewRenamedFiles": "false",
  "json": true,
  "negationPatternsFirst": "false",
  "oldNewFilesSeparator": undefined,
  "oldNewSeparator": undefined,
  "outputDir": undefined,
  "outputRenamedFilesAsDeletedAndAdded": "false",
  "path": undefined,
  "quotepath": "false",
  "recoverDeletedFiles": "false",
  "recoverDeletedFilesToDestination": undefined,
  "recoverFiles": undefined,
  "recoverFilesIgnore": undefined,
  "recoverFilesIgnoreSeparator": undefined,
  "recoverFilesSeparator": undefined,
  "safeOutput": "false",
  "separator": undefined,
  "sha": undefined,
  "since": undefined,
  "sinceLastRemoteCommit": "false",
  "skipInitialFetch": "true",
  "token": undefined,
  "until": undefined,
  "useRestApi": "false",
  "writeOutputFiles": "false",
}
`;

exports[`getInputs should correctly parse numeric inputs 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": 2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": 5,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "token": "",
  "until": "",
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should correctly parse string inputs 1`] = `
{
  "apiUrl": "https://api.github.com",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "token": "token",
  "until": "",
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should handle invalid numeric inputs correctly 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": 2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": NaN,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "token": "",
  "until": "",
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should handle negative numeric inputs correctly 1`] = `
{
  "apiUrl": "",
  "baseSha": "",
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": "",
  "dirNamesIncludeFilesSeparator": "",
  "dirNamesMaxDepth": -2,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "fetchDepth": 2,
  "files": "",
  "filesFromSourceFile": "",
  "filesFromSourceFileSeparator": "",
  "filesIgnore": "",
  "filesIgnoreFromSourceFile": "",
  "filesIgnoreFromSourceFileSeparator": "",
  "filesIgnoreSeparator": "",
  "filesIgnoreYaml": "",
  "filesIgnoreYamlFromSourceFile": "",
  "filesIgnoreYamlFromSourceFileSeparator": "",
  "filesSeparator": "",
  "filesYaml": "",
  "filesYamlFromSourceFile": "",
  "filesYamlFromSourceFileSeparator": "",
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": "",
  "oldNewSeparator": "",
  "outputDir": "",
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": "",
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": "",
  "recoverFiles": "",
  "recoverFilesIgnore": "",
  "recoverFilesIgnoreSeparator": "",
  "recoverFilesSeparator": "",
  "safeOutput": false,
  "separator": "",
  "sha": "",
  "since": "",
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "token": "",
  "until": "",
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;

exports[`getInputs should return default values when no inputs are provided 1`] = `
{
  "apiUrl": undefined,
  "baseSha": undefined,
  "diffRelative": true,
  "dirNames": false,
  "dirNamesDeletedFilesIncludeOnlyDeletedDirs": false,
  "dirNamesExcludeCurrentDir": false,
  "dirNamesIncludeFiles": undefined,
  "dirNamesIncludeFilesSeparator": undefined,
  "escapeJson": false,
  "excludeSubmodules": false,
  "failOnInitialDiffError": false,
  "failOnSubmoduleDiffError": false,
  "fetchAdditionalSubmoduleHistory": false,
  "files": undefined,
  "filesFromSourceFile": undefined,
  "filesFromSourceFileSeparator": undefined,
  "filesIgnore": undefined,
  "filesIgnoreFromSourceFile": undefined,
  "filesIgnoreFromSourceFileSeparator": undefined,
  "filesIgnoreSeparator": undefined,
  "filesIgnoreYaml": undefined,
  "filesIgnoreYamlFromSourceFile": undefined,
  "filesIgnoreYamlFromSourceFileSeparator": undefined,
  "filesSeparator": undefined,
  "filesYaml": undefined,
  "filesYamlFromSourceFile": undefined,
  "filesYamlFromSourceFileSeparator": undefined,
  "includeAllOldNewRenamedFiles": false,
  "json": false,
  "negationPatternsFirst": false,
  "oldNewFilesSeparator": undefined,
  "oldNewSeparator": undefined,
  "outputDir": undefined,
  "outputRenamedFilesAsDeletedAndAdded": false,
  "path": undefined,
  "quotepath": true,
  "recoverDeletedFiles": false,
  "recoverDeletedFilesToDestination": undefined,
  "recoverFiles": undefined,
  "recoverFilesIgnore": undefined,
  "recoverFilesIgnoreSeparator": undefined,
  "recoverFilesSeparator": undefined,
  "safeOutput": false,
  "separator": undefined,
  "sha": undefined,
  "since": undefined,
  "sinceLastRemoteCommit": false,
  "skipInitialFetch": false,
  "token": undefined,
  "until": undefined,
  "useRestApi": false,
  "writeOutputFiles": false,
}
`;
